--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+.app {
+  display:flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-self: center;
+  width: 100%;
+  text-align: center;
+  background-color: rgb(240,240,240);
 }
 
-.App-link {
-  color: #61dafb;
+.app > * {
+  border-top: 6px solid navy;
+  border-bottom: 6px solid navy;
+  margin: 2% 0;
+  padding: 1% 0;
+  background-color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button {
+  background-color: lightgreen;
+  color: black;
+  padding: 0.5% 2%;
+  border-radius: 10px;
+  border: none;
+  font-size: 18px;
+  cursor: pointer;
 }
